Added more ignores patterns

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+bin/
 target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+*.*~
+*.tmp
+.classpath
+.settings
+/bin/
