--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,16 @@
 			<groupId>uk.ac.gate</groupId>
 			<artifactId>gate-core</artifactId>
 			<version>${gate-core.version}</version>
+			<exclusions>
+		      <exclusion> 
+		        <groupId>org.slf4j</groupId>
+		        <artifactId>slf4j-log4j12</artifactId>
+		      </exclusion>
+		      <exclusion> 
+		        <groupId>log4j</groupId>
+		        <artifactId>log4j</artifactId>
+		      </exclusion>
+		    </exclusions> 
 		</dependency>
 		<dependency>
 			<groupId>org.apache.jena</groupId>
